Fix upload style in list item Tabs no flickering sort toggle button

--- a/resources/assets/sass/mixins/_helper-mixins.scss
+++ b/resources/assets/sass/mixins/_helper-mixins.scss
@@ -9,6 +9,19 @@
 //   ===========================================
 
 
+
+///////// Bootstrap
+
+@mixin transition($transition...) {
+  @if $enable-transitions {
+    @if length($transition) == 0 {
+      transition: $transition-base;
+    } @else {
+      transition: $transition;
+    }
+  }
+}
+
 //----------------------------------------------
 // Misc
 // ---------------------------------------------
